--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Facebook Group P_Vexed Sharer",
+  "name": "Telegram Group P_Vexed Sharer",
   "version": "0.2",
   "manifest_version": 3,
   "permissions": [
@@ -11,7 +11,7 @@
   },
   "action": {
     "default_icon": "static/Vexed.png",
-    "default_title": "Share on Facebook Group P_Vexed"
+    "default_title": "Share on Telegram Group P_Vexed"
   },
   "background": {
     "service_worker": "sw.js"
@@ -25,7 +25,7 @@
       "world": "MAIN",
       "all_frames": true,
       "matches": [
-        "https://www.facebook.com/groups/p.vexed?sharer=*"
+        "https://web.telegram.org/k/?sharer=*"
       ]
     }
   ]
